[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/CombatAction/CombatActionAttack.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=2]
[ext_resource path="res://assets/knights.png" type="Texture" id=3]

[node name="CombatActionAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="CharacterRemoteTransform2D" type="RemoteTransform2D" parent="."]
update_position = false
update_rotation = false
update_scale = false

[node name="WeaponRemoteTransform" type="RemoteTransform2D" parent="."]
update_position = false
update_rotation = false
update_scale = false

[node name="Placeholders" type="Node2D" parent="."]
visible = false

[node name="CharacterPivot" type="Position2D" parent="Placeholders"]

[node name="CharacterSprite" type="Sprite" parent="Placeholders/CharacterPivot"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 64, 16, 32 )

[node name="WeaponPivot" type="Position2D" parent="Placeholders"]

[node name="WeaponSprite" type="Sprite" parent="Placeholders/WeaponPivot"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 320, 16, 16, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
